src/objects/Utility_Account_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Subscribed_Annual_Cost_of_Electricity__c</fullName>
        <description>Used for SREC CS contracts. Check the Subscription Type to see if this fields should be used. It is used to calculate the future customer subscription kW DC field for Opportunities with the SREC CS Product. It is populated manually.</description>
        <inlineHelpText>Used for SREC CS contracts. Check the Subscription Type to see if this fields should be used. It is used to calculate the future customer subscription kW DC field for Opportunities with the SREC CS Product. It is populated manually.</inlineHelpText>
        <label>xxAnnual Cost of Electricity (Future)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscribed_NMC_Allocation_kWh__c</fullName>
        <formula>IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true
,
Future_Customer_Subscription_KWDC_Rollup__c
,
Customer_Subscription_KW_DC__c
)
 *  
IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,
Shared_Solar_System__r.Expected_Yield_kWh_kW__c,
Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMC Allocation (kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Comment_c__c</fullName>
        <label>Subscription Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link between SF subscription and Zuora Subscription. There will be 1 Subscription Rate Plan Charge record for every customer, project and client combination (one Subscription Rate Plan Charge can have multiple UASes)</description>
        <label>Subscription Rate Plan Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Utility Account Subscriptions (Subscription Rate Plan Charge)</relationshipLabel>
        <relationshipName>Utility_Account_Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <description>This is the Customer Subscription Type field from the Product assigned to the Opportunity the UAS is for. It determines if the UAS should use the Annual kWh of Annual Cost fields for sizing, and is used by a validation rule to prevent the wrong sizing fields from being used.</description>
        <formula>TEXT(Opportunity__r.Product__r.Customer_Subscription_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Customer Subscription Type field from the Product assigned to the Opportunity the UAS is for. Determines if the Annual kWh or the Annual Cost fields should be used, and is used by a validation rule to prevent usage of the wrong sizing fields.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Count_of_Schedule_Zs__c</fullName>
        <label>Total Count of Allocation Schedules</label>
        <summaryForeignKey>Schedule_Z_Subscription__c.Utility_Account_Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transferred_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup to the Subscription Transfer that is used to relate the newly created UAS to the Subscription Transfer that created it.</description>
        <inlineHelpText>This should be populated when a new UAS is created from a Subscription Transfer.  There should usually be one UAS created by a single Subscription Transfer unless a UAS is being split into multiple new UASs.</inlineHelpText>
        <label>Transferred From</label>
        <referenceTo>Subscription_Transfer__c</referenceTo>
        <relationshipLabel>Transferred to UASs</relationshipLabel>
        <relationshipName>Utility_Account_Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup to the transfer object which relates to both this UAS and the UAS that is replacing it.</description>
        <inlineHelpText>This should be populated when a UAS is transferred to a new one via Subscription Transfer.  You should typically make a new transfer for each UAS that is being transferred unless they are being combined.</inlineHelpText>
        <label>Transferred To</label>
        <referenceTo>Subscription_Transfer__c</referenceTo>
        <relationshipLabel>Transferred From UASs</relationshipLabel>
        <relationshipName>Utility_Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferring_Subsc_to_Another_UAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transferring Subsc. to Another UAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Tester__c</fullName>
        <label>Trigger Tester</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAS_Number__c</fullName>
        <label>UAS Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unlock_Password__c</fullName>
        <label>Unlock Password</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to fire subscription dilution trigger - fired by Process Builder</description>
        <label>Update Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility_Account_Log_Name__c</fullName>
        <description>Used in the UAS display flow on cases</description>
        <formula>Utility_Account_Log__r.Name</formula>
        <label>Utility Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Account_Log__c</fullName>
        <inlineHelpText>The related UAL</inlineHelpText>
        <label>Utility Account Log</label>
        <referenceTo>Utility_Account_Log__c</referenceTo>
        <relationshipLabel>Utility Account Subscriptions</relationshipLabel>
        <relationshipName>Utility_Account_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <formula>Opportunity__r.UtilityMapper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calculated_annual_cost_of_electricity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The Minimum of Total UAL Cost and Maximum SSS Cost. (As more UAS are created, UAL Cost is deducted)</description>
        <label>Calculated Annual Cost of Electricity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kW_Allocation__c</fullName>
        <description>This field multiplies the ROUNDED Future Shared of System by the System Size in kW DC.</description>
        <formula>Future_Share_of_System_Rollup__c
* 
Shared_Solar_System__r.Total_System_Size_kWh_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>kW size based on % subscription on allocation schedule</inlineHelpText>
        <label>kW Allocation</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Utility Account Subscription</label>
    <listViews>
        <fullName>Customer_Community_List_Community_Solar_Subscriptions</fullName>
        <columns>Utility_Account_Log_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Address_From_Log__c</columns>
        <columns>Shared_Solar_System_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Schedule_Z_Status__c</field>
            <operation>equals</operation>
            <value>Active Subscription</value>
        </filters>
        <label>Community Solar Subscriptions</label>
        <sharedTo>
            <group>All_Communities_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Utility Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Account Subscriptions</pluralLabel>
    <recordTypes>
        <fullName>Utility_Account_Subscription_Editable</fullName>
        <active>true</active>
        <label>Utility Account Subscription Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Utility_Account_Subscription_on_Schedule_Z</fullName>
        <active>true</active>
        <label>Utility Account Subscription on Schedule Z</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Project_Company_Field</fullName>
        <active>true</active>
        <description>Restricts users who can edit project co field once it has already been updated to principals only</description>
        <errorConditionFormula>AND(
 NOT(TEXT(PRIORVALUE(Project_Company__c)) = null),
 NOT(ISNEW()), 
 NOT(ISCLONE()),
 ISCHANGED(Project_Company__c), 
 NOT(OR(
  $UserRole.Id = &quot;00E0a000000Nd2M&quot;,
  $UserRole.Id = &quot;00E0a000000Nd2N&quot;,
  $UserRole.Id = &quot;00E0a000000Nd2L&quot;))
)</errorConditionFormula>
        <errorMessage>The Project Company field cannot be changed by this user. Please contact your System Administrator or a BlueWave Executive if you need to change the assignment of a contract to a Project Company.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_and_SSS_Lock</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISNEW()=false, /*does not apply to new records*/

OR(
   AND( ISCHANGED(Shared_Solar_System__c)=true,
        NOT(PRIORVALUE(Shared_Solar_System__c)=&quot;&quot;) /*prevent SSS changes once populated*/
),
   AND( ISCHANGED( Opportunity__c )=true,
        NOT(PRIORVALUE(Opportunity__c)=&quot;&quot;) /*prevent opp changes once populated*/
)
)
)</errorConditionFormula>
        <errorMessage>The Shared Solar System and Opportunity on a Utility Account Subscription cannot be changed. If you are trying to change the Shared Solar System, do so on the Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sizing_Control</fullName>
        <active>true</active>
        <description>This validation rule prevents a user from filling in the wrong sizing fields (kWh or Cost) on the UAS.</description>
        <errorConditionFormula>IF( $CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,
/*use SO rollup fields if SO feature is on*/

OR(
AND(
Subscription_Type__c=&quot;kWh&quot;,
ISCHANGED(Annual_Cost_Future_Rollup__c)=true,
ISBLANK(Annual_Cost_Future_Rollup__c)=false)
,
AND(
Subscription_Type__c=&quot;Electricity Cost ($)&quot;,
ISCHANGED(Annual_kWh_Subscription_Future_Rollup__c)=true,
ISBLANK(Annual_kWh_Subscription_Future_Rollup__c)=false)
) 
,

/*use non rollup fields if SO feature is not on*/
OR(
AND(
Subscription_Type__c=&quot;kWh&quot;,
ISCHANGED(Subscribed_Annual_Cost_of_Electricity__c)=true,
ISBLANK(Subscribed_Annual_Cost_of_Electricity__c)=false)
,
AND(
Subscription_Type__c=&quot;Electricity Cost ($)&quot;,
ISCHANGED(Annual_kwh_subscription_future__c)=true,
ISBLANK(Annual_kwh_subscription_future__c)=false)
)
)</errorConditionFormula>
        <errorMessage>You&apos;re using the wrong sizing fields. Look at the Subscription Type field. If it&apos;s kWh, use the Annual kWh sizing fields. If it&apos;s Electricity Cost ($), use the Annual Cost sizing fields. The subscription type is set by the Product on the Opportunity.</errorMessage>
    </validationRules>
</CustomObject>